--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,6 @@ body{
 .banners .banner-right img{
     width: 300px;
     }
-/* .banner-right{
-    
-    background-image: url(img/Circle\ design.svg);
-    background-repeat: no-repeat;
-} */
 
 /* Banner Section End  */
 
@@ -69,18 +64,12 @@ body{
 /* Popular Collection Section */
 
 
-
-
-
 .products{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-column-gap: 50px;
-    grid-row-gap: 50px;
-   
-    
+    grid-row-gap: 50px;    
 }
-
 
 .product{
     
@@ -89,10 +78,13 @@ body{
     padding:30px 30px ;
     box-shadow: 10px 10px 40px rgba(192, 196, 199, 0.705);
     border-radius: 10px;
-    
-    
+       
 }
 
+
+.product-price{
+    font-size: 24px;
+}
 
 .fa-star{
     font-size: 12px;
@@ -148,31 +140,27 @@ footer a{
 
 
 /* responsive css */
+
+
+/* Tablet Responsive */
+
 @media (max-width:1200px) {
-
-
-    .products{
-
-            
-            
-        grid-template-columns: repeat(2,1fr);
-        
-    }
-
-    
+    .products{         
+        grid-template-columns: repeat(2,1fr);      
+    }    
 }
 
 
-
-
+/* Mobile Responsive */
 
 @media (max-width:750px) {
 
 
+
         main{
-            margin:0;
-            
+            margin:0;    
         }
+
 
         .title{
             font-size: 20px;
@@ -193,16 +181,9 @@ footer a{
         }
 
 
-        .banners .banner-left h1{
-            font-size: 20px;
-            font-weight: 600;
-            
+        .banner-left h1{
+            font-size: 40px;
         }
-
-
-        .banners .banner-right img{
-            width:60%;
-            }
 
 
         .banner-left p{
@@ -210,6 +191,18 @@ footer a{
             font-size: 16px;
             font-weight: 500;
         }
+
+        .banners .banner-left h1{
+            font-size: 20px;
+            font-weight: 600;
+            
+        }
+
+        .banners .banner-right img{
+            width:60%;
+            }
+
+       
 
 
         .banner-right{
@@ -222,43 +215,28 @@ footer a{
             text-align: center;
         }
 
-        .banner-left h1{
-            font-size: 40px;
-        }
 
 
-
+        /* Product Section */
 
 
         .products{
-
-            
-            
+  
             grid-template-columns: repeat(1,1fr);
             
         }
 
-
-        
-
         .product{
-
-
             width: 330px;
-    
-            
             padding:20px 0px 20px 20px;
             box-shadow: 10px 10px 40px rgba(192, 196, 199, 0.705);
             border-radius: 10px;
-            
-            
+              
         }
 
         .products .product-img img{
             width: 90%;
         }
-
-        
-    
+         
     
 }
